# EchoRev

./: AGENTS.md  PKG-INFO  README.md  build.bat  build.sh  build_publish.bat  build_publish.sh  publish.py  pyproject.toml  setup.py  tmp.py  upload_pypi.bat  upload_pypi.sh
echorev/: __init__.py  getB.py  pack.sh  requirements.txt  result.txt  setup.py  test.html  test.py  testGPG.py  tmp.py
pack/: ._EchoRev-Windows-2020-2-16.7z
